update tmux configuration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,9 +65,9 @@ set -g status-style "bg=#050014,fg=#a1a1aa"
 set -g status-left-length 50
 set -g status-left "#[fg=#8b5cf6,bold]◆ #S #[default]│ "
 
-# Right side - Git branch, date and time
-set -g status-right-length 100
-set -g status-right "#[fg=#d8b4fe]⎇ #(cd #{pane_current_path}; git branch --show-current 2>/dev/null) #[fg=#f5d0fe]%H:%M"
+# Right side - Git branch, system stats, date and time
+set -g status-right-length 150
+set -g status-right "#[fg=#d8b4fe]⎇ #(cd #{pane_current_path}; git branch --show-current 2>/dev/null) #[fg=#a78bfa]│ #[fg=#c084fc]#(top -l 1 -n 0 | grep 'CPU usage' | awk '{print $3}') #[fg=#a78bfa]│ #[fg=#c084fc]#(memory_pressure | head -1 | awk '{print 100-$5}')%% #[fg=#a78bfa]│ #[fg=#f5d0fe]#(pmset -g batt | grep -Eo '[0-9]+%%' | head -1) #[fg=#a78bfa]│ #[fg=#f5d0fe]%H:%M"
 
 # Window status
 set -g window-status-format "#[fg=#a78bfa] #I #W "
@@ -140,6 +140,37 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 #   Ctrl-o   - Open file in $EDITOR
 #   Shift-s  - Search highlighted text in Google
 set -g @plugin 'tmux-plugins/tmux-open'
+
+# ══════════════════════════════════════════════════════════════════════════════
+# Popup Bindings
+# ══════════════════════════════════════════════════════════════════════════════
+bind ? display-popup -w 80% -h 80% -E "grep -E '^bind|^set -g @plugin' ~/.config/tmux/tmux.conf | fzf --reverse --header='Tmux Keybindings'"
+bind g display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazygit"
+bind o display-popup -E "grep -E '^Host ' ~/.ssh/config 2>/dev/null | awk '{print \$2}' | grep -v '*' | fzf --reverse --header='SSH Connect' | xargs -I {} tmux new-window 'ssh {}'"
+bind C-e display-popup -w 60% -h 60% -E "nvim ~/notes/scratch.md"
+bind i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
+bind d display-popup -w 90% -h 90% -E "lazydocker"
+unbind x
+bind x display-popup -d "#{pane_current_path}" -w 70% -h 70% -E "~/.tmux/scripts/cmd-runner.sh"
+
+# ══════════════════════════════════════════════════════════════════════════════
+# Window Management (prefix + w, then ...)
+# ══════════════════════════════════════════════════════════════════════════════
+bind w switch-client -T window_table
+bind -T window_table k confirm-before -p "kill window #W? (y/n)" kill-window
+bind -T window_table r command-prompt -I "#W" "rename-window '%%'"
+bind -T window_table n new-window -c "#{pane_current_path}"
+bind -T window_table f display-popup -w 60% -h 60% -E "tmux list-windows -a -F '#{session_name}:#{window_index} #{window_name}' | fzf --reverse --header='Find Window' --border=rounded --margin=1,2 --padding=1 | cut -d' ' -f1 | xargs tmux switch-client -t"
+
+# ══════════════════════════════════════════════════════════════════════════════
+# Session Management (prefix + s, then ...)
+# ══════════════════════════════════════════════════════════════════════════════
+bind s switch-client -T session_table
+bind -T session_table s display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | fzf --reverse --header='Switch Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux switch-client -t"
+bind -T session_table l choose-tree -s
+bind -T session_table n command-prompt -p "New session name:" "new-session -d -s '%%' && switch-client -t '%%'"
+bind -T session_table k display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header='Kill Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux kill-session -t"
+bind -T session_table r command-prompt -I "#S" "rename-session '%%'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
