update tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,7 @@ set -g display-time 4000
 set -g status-interval 5
 set -g focus-events on
 set -sg escape-time 0
+set -g default-command "$SHELL -l"
 
 # ══════════════════════════════════════════════════════════════════════════════
 # Key Bindings (Preserved)
@@ -66,8 +67,14 @@ set -g status-left-length 50
 set -g status-left "#[fg=#8b5cf6,bold]◆ #S #[default]│ "
 
 # Right side - Git branch, system stats, date and time
-set -g status-right-length 150
-set -g status-right "#[fg=#d8b4fe]⎇ #(cd #{pane_current_path}; git branch --show-current 2>/dev/null) #[fg=#a78bfa]│ #[fg=#c084fc]#(top -l 1 -n 0 | grep 'CPU usage' | awk '{print $3}') #[fg=#a78bfa]│ #[fg=#c084fc]#(memory_pressure | head -1 | awk '{print 100-$5}')%% #[fg=#a78bfa]│ #[fg=#f5d0fe]#(pmset -g batt | grep -Eo '[0-9]+%%' | head -1) #[fg=#a78bfa]│ #[fg=#f5d0fe]%H:%M"
+set -g status-right-length 300
+set -g status-right "\
+#[fg=#f472b6] #(cd #{pane_current_path}; git branch --show-current 2>/dev/null) \
+#[fg=#6b7280]│ #[fg=#38bdf8]  #(top -l 1 -n 0 | grep 'CPU usage' | awk '{print $3}') \
+#[fg=#6b7280]│ #[fg=#f97316]  #(uptime | sed 's/.*up //' | sed 's/,.*//' | xargs) \
+#[fg=#6b7280]│ #[fg=#38bdf8]  #(docker ps -q 2>/dev/null | wc -l | tr -d ' ') \
+#[fg=#6b7280]│ #[fg=#4ade80]  #(pmset -g batt | grep -Eo '[0-9]+%%' | head -1) \
+#[fg=#6b7280]│ #[fg=#fbbf24]%a %d │ %H:%M"
 
 # Window status
 set -g window-status-format "#[fg=#a78bfa] #I #W "
@@ -151,7 +158,7 @@ bind C-e display-popup -w 60% -h 60% -E "nvim ~/notes/scratch.md"
 bind i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 bind d display-popup -w 90% -h 90% -E "lazydocker"
 unbind x
-bind x display-popup -d "#{pane_current_path}" -w 70% -h 70% -E "~/.tmux/scripts/cmd-runner.sh"
+bind x display-popup -d "#{pane_current_path}" -w 70% -h 70% -E "~/.config/tmux/scripts/cmd-runner.sh"
 
 # ══════════════════════════════════════════════════════════════════════════════
 # Window Management (prefix + w, then ...)
