--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,8 +2,8 @@
 include ./kitty-themes/themes/Purple-Custom.conf
 
 # ===== Font =====
-font_family Osaka
-font_size 18
+font_family JetBrains Mono SemiBold
+font_size 15
 modify_font cell_width 95%
 macos_thicken_font 0.25
 
