add yazi to tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,27 @@
 # ══════════════════════════════════════════════════════════════════════════════
+# SETUP INSTRUCTIONS (for new machines)
+# ══════════════════════════════════════════════════════════════════════════════
+# Required dependencies:
+#   brew install tmux fzf lazygit lazydocker yazi neovim
+#
+# Install TPM (Tmux Plugin Manager):
+#   git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#
+# After starting tmux:
+#   1. Press prefix + I (capital i) to install plugins
+#   2. Press prefix + r to reload config
+#
+# Optional: Create scratch notes file for prefix + C-e:
+#   mkdir -p ~/notes && touch ~/notes/scratch.md
+#
+# Optional: Create cmd-runner script for prefix + x:
+#   mkdir -p ~/.config/tmux/scripts
+#   # Add your custom cmd-runner.sh script
+#
+# For vim-tmux-navigator, install matching plugin in neovim:
+#   { "christoomey/vim-tmux-navigator" }
+#
+# ══════════════════════════════════════════════════════════════════════════════
 # Terminal & General Settings
 # ══════════════════════════════════════════════════════════════════════════════
 set -g default-terminal "tmux-256color"
@@ -156,6 +179,8 @@ bind o display-popup -E "grep -E '^Host ' ~/.ssh/config 2>/dev/null | awk '{prin
 bind C-e display-popup -w 60% -h 60% -E "nvim ~/notes/scratch.md"
 bind i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 bind d display-popup -w 90% -h 90% -E "lazydocker"
+# bind e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E 'yazi --cwd-file=/tmp/yazi-cwd-$$; [ -s /tmp/yazi-cwd-$$ ] && tmux send-keys "cd \"$(cat /tmp/yazi-cwd-$$)\"" Enter; rm -f /tmp/yazi-cwd-$$'
+bind e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
 unbind x
 bind x display-popup -d "#{pane_current_path}" -w 70% -h 70% -E "~/.config/tmux/scripts/cmd-runner.sh"
 
@@ -174,7 +199,7 @@ bind -T window_table f display-popup -w 60% -h 60% -E "tmux list-windows -a -F '
 bind s switch-client -T session_table
 bind -T session_table s display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | fzf --reverse --header='Switch Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux switch-client -t"
 bind -T session_table l choose-tree -s
-bind -T session_table n command-prompt -p "New session name:" "new-session -d -s '%%' && switch-client -t '%%'"
+bind -T session_table n command-prompt -p "New session name:" "new-session -s '%%' -c ~/Desktop"
 bind -T session_table k display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header='Kill Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux kill-session -t"
 bind -T session_table r command-prompt -I "#S" "rename-session '%%'"
 
