--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,8 @@ include ./kitty-themes/themes/Purple-Custom.conf
 
 # ===== Font =====
 font_family JetBrains Mono SemiBold
-font_size 15
+# font_family Osaka
+font_size 14
 modify_font cell_width 95%
 macos_thicken_font 0.25
 
