--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,6 +24,7 @@
 # ══════════════════════════════════════════════════════════════════════════════
 # Terminal & General Settings
 # ══════════════════════════════════════════════════════════════════════════════
+set -g allow-passthrough on
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -g mouse on
