--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,30 +48,30 @@ unbind C-a
 bind-key C-a send-prefix
 
 unbind %
-bind | split-window -h -c "#{pane_current_path}"
+bind -N "Split pane horizontally" | split-window -h -c "#{pane_current_path}"
 
 unbind 'c'
-bind-key c new-window -c "#{pane_current_path}"
+bind-key -N "New window" c new-window -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v -c "#{pane_current_path}"
+bind -N "Split pane vertically" - split-window -v -c "#{pane_current_path}"
 
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind -N "Reload tmux config" r source-file ~/.config/tmux/tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
-bind -r m resize-pane -Z
+bind -N "Resize pane down" -r j resize-pane -D 5
+bind -N "Resize pane up" -r k resize-pane -U 5
+bind -N "Resize pane right" -r l resize-pane -R 5
+bind -N "Resize pane left" -r h resize-pane -L 5
+bind -N "Toggle pane zoom" -r m resize-pane -Z
 
 bind-key -n C-Enter send-keys "<C-CR>"
 
 set-option -g update-environment 'PWD'
 
-bind n next
+bind -N "Next window" n next
 unbind p
-bind p previous-window
+bind -N "Previous window" p previous-window
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -174,35 +174,35 @@ set -g @plugin 'tmux-plugins/tmux-open'
 # ══════════════════════════════════════════════════════════════════════════════
 # Popup Bindings
 # ══════════════════════════════════════════════════════════════════════════════
-bind ? display-popup -w 80% -h 80% -E "grep -E '^bind|^set -g @plugin' ~/.config/tmux/tmux.conf | fzf --reverse --header='Tmux Keybindings'"
-bind g display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazygit"
-bind o display-popup -E "grep -E '^Host ' ~/.ssh/config 2>/dev/null | awk '{print \$2}' | grep -v '*' | fzf --reverse --header='SSH Connect' | xargs -I {} tmux new-window 'ssh {}'"
-bind C-e display-popup -w 60% -h 60% -E "nvim ~/notes/scratch.md"
-bind i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
-bind d display-popup -w 90% -h 90% -E "lazydocker"
+bind -N "Show keybindings" ? display-popup -w 80% -h 80% -E "tmux list-keys -N | fzf --reverse --header='Tmux Keybindings'"
+bind -N "Open lazygit" g display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazygit"
+bind -N "SSH connect" o display-popup -E "grep -E '^Host ' ~/.ssh/config 2>/dev/null | awk '{print \$2}' | grep -v '*' | fzf --reverse --header='SSH Connect' | xargs -I {} tmux new-window 'ssh {}'"
+bind -N "Edit scratch notes" C-e display-popup -w 60% -h 60% -E "nvim ~/notes/scratch.md"
+bind -N "Popup shell" i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
+bind -N "Open lazydocker" d display-popup -w 90% -h 90% -E "lazydocker"
 # bind e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E 'yazi --cwd-file=/tmp/yazi-cwd-$$; [ -s /tmp/yazi-cwd-$$ ] && tmux send-keys "cd \"$(cat /tmp/yazi-cwd-$$)\"" Enter; rm -f /tmp/yazi-cwd-$$'
-bind e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
+bind -N "Open yazi file manager" e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
 unbind x
-bind x display-popup -d "#{pane_current_path}" -w 70% -h 70% -E "~/.config/tmux/scripts/cmd-runner.sh"
+bind -N "Run command" x display-popup -d "#{pane_current_path}" -w 70% -h 70% -E "~/.config/tmux/scripts/cmd-runner.sh"
 
 # ══════════════════════════════════════════════════════════════════════════════
 # Window Management (prefix + w, then ...)
 # ══════════════════════════════════════════════════════════════════════════════
-bind w switch-client -T window_table
-bind -T window_table k confirm-before -p "kill window #W? (y/n)" kill-window
-bind -T window_table r command-prompt -I "#W" "rename-window '%%'"
-bind -T window_table n new-window -c "#{pane_current_path}"
-bind -T window_table f display-popup -w 60% -h 60% -E "tmux list-windows -a -F '#{session_name}:#{window_index} #{window_name}' | fzf --reverse --header='Find Window' --border=rounded --margin=1,2 --padding=1 | cut -d' ' -f1 | xargs tmux switch-client -t"
+bind -N "Window menu" w switch-client -T window_table
+bind -N "Kill window" -T window_table k confirm-before -p "kill window #W? (y/n)" kill-window
+bind -N "Rename window" -T window_table r command-prompt -I "#W" "rename-window '%%'"
+bind -N "New window" -T window_table n new-window -c "#{pane_current_path}"
+bind -N "Find window" -T window_table f display-popup -w 60% -h 60% -E "tmux list-windows -a -F '#{session_name}:#{window_index} #{window_name}' | fzf --reverse --header='Find Window' --border=rounded --margin=1,2 --padding=1 | cut -d' ' -f1 | xargs tmux switch-client -t"
 
 # ══════════════════════════════════════════════════════════════════════════════
 # Session Management (prefix + s, then ...)
 # ══════════════════════════════════════════════════════════════════════════════
-bind s switch-client -T session_table
-bind -T session_table s display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | fzf --reverse --header='Switch Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux switch-client -t"
-bind -T session_table l choose-tree -s
-bind -T session_table n command-prompt -p "New session name:" "new-session -s '%%' -c ~/Desktop"
-bind -T session_table k display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header='Kill Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux kill-session -t"
-bind -T session_table r command-prompt -I "#S" "rename-session '%%'"
+bind -N "Session menu" s switch-client -T session_table
+bind -N "Switch session" -T session_table s display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | fzf --reverse --header='Switch Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux switch-client -t"
+bind -N "List sessions" -T session_table l choose-tree -s
+bind -N "New session" -T session_table n command-prompt -p "New session name:" "new-session -s '%%' -c ~/Desktop"
+bind -N "Kill session" -T session_table k display-popup -w 50% -h 50% -E "tmux list-sessions -F '#{session_name}' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header='Kill Session' --border=rounded --margin=1,2 --padding=1 --preview='tmux list-windows -t {}' --preview-window=down:3:wrap | xargs tmux kill-session -t"
+bind -N "Rename session" -T session_table r command-prompt -I "#S" "rename-session '%%'"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
