add typing game to tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 # ══════════════════════════════════════════════════════════════════════════════
 # Required dependencies:
 #   brew install tmux fzf lazygit lazydocker yazi neovim
-#
+#   brew install unhappychoice/tap/gittype
 # Install TPM (Tmux Plugin Manager):
 #   git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 #
@@ -177,8 +177,9 @@ bind -N "SSH connect" o display-popup -E "grep -E '^Host ' ~/.ssh/config 2>/dev/
 bind -N "Edit scratch notes" C-e display-popup -w 60% -h 60% -E "nvim ~/notes/scratch.md"
 bind -N "Popup shell" i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 bind -N "Open lazydocker" d display-popup -w 90% -h 90% -E "lazydocker"
-# bind e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E 'yazi --cwd-file=/tmp/yazi-cwd-$$; [ -s /tmp/yazi-cwd-$$ ] && tmux send-keys "cd \"$(cat /tmp/yazi-cwd-$$)\"" Enter; rm -f /tmp/yazi-cwd-$$'
 bind -N "Open yazi file manager" e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
+bind -N "Open Git Type Game" v display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "gittype"
+
 unbind x
 bind -N "Run command" x display-popup -d "#{pane_current_path}" -w 70% -h 70% -E "~/.config/tmux/scripts/cmd-runner.sh"
 
