--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,13 @@
 # Required dependencies:
 #   brew install tmux fzf lazygit lazydocker yazi neovim
 #   brew install unhappychoice/tap/gittype
+#
+# Install uv on MacOS/Linux
+#   curl -LsSf https://astral.sh/uv/install.sh | sh
+
+# Install Posting (will also quickly install Python 3.13 if needed)
+#  uv tool install --python 3.13 posting
+#
 # Install TPM (Tmux Plugin Manager):
 #   git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 #
@@ -178,6 +185,8 @@ bind -N "Edit scratch notes" C-e display-popup -w 60% -h 60% -E "nvim ~/notes/sc
 bind -N "Popup shell" i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 bind -N "Open lazydocker" d display-popup -w 90% -h 90% -E "lazydocker"
 bind -N "Open yazi file manager" e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
+
+unbind v
 bind -N "Open Git Type Game" v display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "gittype"
 
 unbind x
