modify some stuff

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@
 # SETUP INSTRUCTIONS (for new machines)
 # ══════════════════════════════════════════════════════════════════════════════
 # Required dependencies:
-#   brew install tmux fzf lazygit lazydocker yazi neovim
+#   brew install tmux fzf lazygit lazydocker yazi neovim lazysql
 #   brew install unhappychoice/tap/gittype
 #
 # Install uv on MacOS/Linux
