--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -184,7 +184,9 @@ bind -N "SSH connect" o display-popup -E "grep -E '^Host ' ~/.ssh/config 2>/dev/
 bind -N "Edit scratch notes" C-e display-popup -w 60% -h 60% -E "nvim ~/notes/scratch.md"
 bind -N "Popup shell" i display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
 bind -N "Open lazydocker" d display-popup -w 90% -h 90% -E "lazydocker"
-bind -N "Open yazi file manager" e display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "yazi"
+bind -N "Open yazi file manager" e \
+  display-popup -d "#{pane_current_path}" -w 80% -h 80% \
+    -E "zsh -ic yazi"
 
 unbind v
 bind -N "Open Git Type Game" v display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "gittype"
